
package com.mycompany.lapr2_interfacegrafica.model;

import java.io.File;

/**
 *
 * @author beatr
 */
public interface FileReader {
    
    public void readNewFile(File nameFile);
}
