@startuml
skinparam classAttributeIconSize 0

class AplicacaoPOT{
  +static getInstance()
  +getCurrentSession()
}

class UserSession{
  +getUserEmail()
}

class Task {
  -String id
  -String briefDescription
  -Integer timeDuration
  -Double costPerHour
  -String taskCategory
}

class Freelancer {
  -String id
  -String name
  -String expertiseLevel
  -String email
  -String NIF
  -String IBAN
  -String address
  -String country
}

class Organization {
  -String name
  -String NIF
  +getPaymentTransactionRecord()
  +getTaskList()
}


class Platform {
  -String designation
  +getOrganizationRecord()
  +getFreelancerRecord()
}


class OrganizationsRecord  {
  +getOrganizationByUserEmail(email)
}

class UploadFileController {
  +getFileCsv(filename)
  +getTransactions()
}

class UploadFileUI {
}

class PaymentTransaction{
 -Date endDate
 -Double delay
 -String workQualityDescription
}

class PaymentTransactionList{
    +getPaymentTransactions()
}

interface FileReader{
    +readNewFile(filename)
}


UploadFileUI ..> UploadFileController
UploadFileController ..> Platform
UploadFileController ..> Organization
UploadFileController ..> AplicacaoPOT
UploadFileController ..> UserSession
UploadFileController ..> PaymentTransactionList
UploadFileController ..> OrganizationsRecord
UploadFileController ..> FileReader
Platform "1" --> "1" OrganizationsRecord : has


OrganizationsRecord "1" --> "*" Organization : has
Organization "1" --> "*" PaymentTransactionList : has
PaymentTransactionList "1" --> "*" PaymentTransaction : has

PaymentTransaction "1" --> "1" Freelancer : related to
PaymentTransaction "1" --> "1" Task : related to

@enduml